--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@line/liff": "^2.25.1",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
