--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@line/liff": "^2.25.1",
+    "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-qr-code": "^2.0.15",
